Windsurf proposed fixes

--- a/index.html
+++ b/index.html
@@ -6,29 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CinePick: Your Perfect Movie Matchmaker</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/css/flag-icons.min.css"/>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              background: '#0F0E47',
-              surface: '#272757',
-              primary: '#505081',
-              accent: '#8686AC',
-              'text-primary': '#FFFFFF',
-              'text-secondary': '#8686AC',
-            },
-          },
-        },
-      };
-    </script>
-    <style>
-      body {
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-      }
-    </style>
+    <!-- Tailwind CSS is now properly installed as a PostCSS plugin -->
+    <link rel="stylesheet" href="/src/index.css">
   <script type="importmap">
 {
   "imports": {
