feat: add favicon and app icons to public directory

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CinePick: Your Perfect Movie Matchmaker</title>
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="CinePick" />
+  <link rel="manifest" href="/site.webmanifest" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/css/flag-icons.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -13,12 +18,12 @@
       theme: {
         extend: {
           colors: {
-            background: '#231F20',
-            surface: '#14213D',
-            primary: '#14213D',
+            background: '#111827',
+            surface: '#1F2937',
+            primary: '#374151',
             accent: '#FCA311',
-            'text-primary': '#FFFFFF',
-            'text-secondary': '#E5E5E5',
+            'text-primary': '#F9FAFB',
+            'text-secondary': '#9CA3AF',
           },
         },
       },
