chore: update UI theme colors

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="CinePick" />
   <link rel="manifest" href="/site.webmanifest" />
+  <meta name="theme-color" content="#161b22" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/css/flag-icons.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -18,12 +19,12 @@
       theme: {
         extend: {
           colors: {
-            background: '#111827',
-            surface: '#1F2937',
-            primary: '#374151',
+            background: '#0d1117',
+            surface: '#161b22',
+            primary: '#21262d',
             accent: '#FCA311',
-            'text-primary': '#F9FAFB',
-            'text-secondary': '#9CA3AF',
+            'text-primary': '#c9d1d9',
+            'text-secondary': '#8b949e',
           },
         },
       },
