feat: update OpenGraph image and dimensions for better social media preview

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <meta property="og:site_name" content="CinePick">
   <meta property="og:description"
     content="Tired of endless scrolling? CinePick asks a few simple questions about your mood and instantly suggests the perfect movie for you to watch tonight.">
-  <meta property="og:image" content="/apple-touch-icon.png">
+  <meta property="og:image" content="/cinepick-logo-full-white-background.png">
   <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="180">
-  <meta property="og:image:height" content="180">
+  <meta property="og:image:width" content="500">
+  <meta property="og:image:height" content="500">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/css/flag-icons.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
