--- a/index.html
+++ b/index.html
@@ -55,9 +55,6 @@
     window.process = window.process || {};
     window.process.env = window.process.env || {};
 
-    // IMPORTANT: The key below is for The Movie Database (TMDb), NOT for Gemini.
-    // The Gemini API Key is assumed to be provided by the hosting environment.
-    window.process.env.TMDB_API_KEY = 'f178e076eefcdf17fcac104a012c34ba';
   </script>
   <script type="importmap">
 {
@@ -65,7 +62,11 @@
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
     "@google/genai": "https://esm.sh/@google/genai@^1.11.0/",
     "react/": "https://esm.sh/react@^19.1.0/",
-    "react": "https://esm.sh/react@^19.1.0"
+    "react": "https://esm.sh/react@^19.1.0",
+    "firebase/app": "https://esm.sh/firebase@10.12.2/app",
+    "firebase/auth": "https://esm.sh/firebase@10.12.2/auth",
+    "firebase/firestore": "https://esm.sh/firebase@10.12.2/firestore",
+    "firebase/": "https://esm.sh/firebase@^12.0.0/"
   }
 }
 </script>
