--- a/index.html
+++ b/index.html
@@ -47,6 +47,30 @@
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
     }
+
+    .custom-scrollbar::-webkit-scrollbar {
+      width: 10px;
+    }
+
+    .custom-scrollbar::-webkit-scrollbar-track {
+      background: #161b22;
+      border-radius: 10px;
+    }
+
+    .custom-scrollbar::-webkit-scrollbar-thumb {
+      background-color: #8b949e;
+      border-radius: 10px;
+      border: 2px solid #161b22;
+    }
+
+    .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+      background-color: #FCA311;
+    }
+
+    .custom-scrollbar {
+      scrollbar-width: thin;
+      scrollbar-color: #8b949e #161b22;
+    }
   </style>
   <script>
     // Make environment variables available to the app. This approach is used
