--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--
-      Placeholders like __OG_TITLE__ are for the server-side rendering function.
-      They will be replaced with dynamic content for social media previews.
-      For regular users, the client-side app will update the title.
+      The values below are default fallbacks.
+      The renderSharePage Cloud Function will replace these for social media bots.
     -->
-  <title>__OG_TITLE__</title>
+  <title>CinePick</title>
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="shortcut icon" href="/favicon.ico" />
@@ -20,14 +19,14 @@
 
   <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="__OG_TITLE__">
+  <meta property="og:title" content="CinePick">
   <meta property="og:site_name" content="CinePick">
-  <meta property="og:description" content="__OG_DESCRIPTION__">
-  <meta property="og:image" content="__OG_IMAGE__">
+  <meta property="og:description" content="Your perfect movie, picked just for you.">
+  <meta property="og:image" content="https://cinepick-app.web.app/apple-touch-icon.png">
   <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="500">
-  <meta property="og:image:height" content="750">
-  <meta name="description" content="__OG_DESCRIPTION__">
+  <meta property="og:image:width" content="180">
+  <meta property="og:image:height" content="180">
+  <meta name="description" content="Your perfect movie, picked just for you.">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/css/flag-icons.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -77,27 +76,6 @@
       scrollbar-color: #8b949e #161b22;
     }
   </style>
-  <script>
-    // Make environment variables available to the app. This approach is used
-    // for simplicity in this client-side-only project. In a fullstack project,
-    // these would be handled by a build process or environment configuration.
-    window.process = window.process || {};
-    window.process.env = window.process.env || {};
-
-    // IMPORTANT: The key below is for The Movie Database (TMDb), NOT for Gemini.
-    // The Gemini API Key is assumed to be provided by the hosting environment.
-    window.process.env.TMDB_API_KEY = 'f178e076eefcdf17fcac104a012c34ba';
-
-    // Firebase configuration keys are assumed to be provided by the hosting environment.
-    // The values below are placeholders for development and will be undefined in production
-    // if not set in the environment, which the firebase.ts config handles.
-    window.process.env.FIREBASE_API_KEY = undefined;
-    window.process.env.FIREBASE_AUTH_DOMAIN = undefined;
-    window.process.env.FIREBASE_PROJECT_ID = undefined;
-    window.process.env.FIREBASE_STORAGE_BUCKET = undefined;
-    window.process.env.FIREBASE_MESSAGING_SENDER_ID = undefined;
-    window.process.env.FIREBASE_APP_ID = undefined;
-  </script>
   <script type="importmap">
 {
   "imports": {
@@ -112,6 +90,14 @@
   }
 }
 </script>
+  <!-- Microsoft Clarity Analytics -->
+  <script type="text/javascript">
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+    })(window, document, "clarity", "script", "skl6b2eino");
+  </script>
 </head>
 
 <body class="bg-background text-text-primary">
